Logo alignments corrected

--- a/listnride/app/assets/stylesheets/app.css
+++ b/listnride/app/assets/stylesheets/app.css
@@ -1823,7 +1823,7 @@ seo-landing .lnr-section-title {
 
 .velosoph .lnr-section-title .lnr-event-logos {
   width: 100%;
-  height: 100px;
+  height: 80px;
 }
 
 .velosoph .lnr-section-title .lnr-event-logos .event-logo {
@@ -1831,6 +1831,14 @@ seo-landing .lnr-section-title {
   align-items: center;
 }
 
-.velosoph .lnr-section-title .lnr-event-logos .event-logo img {
-  width: 200px;
+.velosoph .lnr-event-logos .katusha img {
+  width: 210px;
+}
+
+.velosoph .lnr-event-logos .pasculli img {
+  width: 210px;
+}
+
+.velosoph .lnr-event-logos .wahoo img {
+  width: 130px;
 }
